package br.edu.ifce.ambientes_internos.model.domain.ambientes.enums

enum class TipoAmbiente(val nome: String) {
    SALA_AULA("Sala de Aula"),
    LABORATORIO("Laboratório"),
    LABORATORIO_INFORMATICA("Laboratório de Informática"),
    BANHEIRO("Banheiro"),
    VESTIARIO("Vestiário"),
    CIRCULACAO("Circulação"),
    AUDITORIO("Auditório"),
    SALA_REUNIAO("Sala de Reunião"),
    SALA_PROFESSORES("Sala de Professores"),
    SALA_ADMINISTRATIVA("Sala Administrativa"),
    SALA_COORDENACAO("Sala de Coordenação"),
    SALA_SERVIDOR_TI("Sala de Servidor de TI"),
    COZINHA("Cozinha"),
    BIBLIOTECA("Biblioteca"),
    GINASIO("Ginásio"),
    ACADEMIA("Academia"),
    CANTINA("Cantina"),
    DEPOSITO("Depósito")
}