package br.edu.ifce.ambientes_internos.model.domain.componentes.enums

enum class TipoExtintor(val nome: String) {
    AGUA("Água"),
    CO2("Dióxido de Carbono (CO2)"),
    PO_QUIMICO("Pó Químico"),
    OUTRO("Outro")
}