package br.edu.ifce.ambientes_internos.model.domain.componentes.enums

enum class TipoLampada(val nome: String) {
    LED("LED"),
    FLUORESCENTE("Fluorescente"),
    VAPOR_METALICO("Vapor Metálico"),
    VAPOR_SODIO("Vapor Sódio"),
    HALOGENA("Halógena"),
    OUTRO("Outro")
}
