package br.edu.ifce.ambientes_internos.model.domain.esquadrias.enums

enum class Abertura(val nome: String) {
    FIXA("Fixa"),
    ABRIR("Abrir"),
    CORRER("Correr"),
    BASCULANTE("Basculante"),
    SANFONADA("Sanfonada"),
    MAXIM_AR("Maxim-ar"),
    PIVOTANTE("Pivotante"),
    GUILHOTINA("Guilhotina"),
    VAO_ABERTO("Vão aberto"),
    OUTRA("Outra")
}
